--- a/documentation/components/NavComponent.html
+++ b/documentation/components/NavComponent.html
@@ -217,6 +217,7 @@ export class NavComponent {
   * showMenu object is a type of boolean and will be responsible for opening mobile nav:
   */
   showMenu: boolean &#x3D; true;
+
 }
 </code></pre>
     </div>
@@ -224,16 +225,20 @@ export class NavComponent {
     <div class="tab-pane fade " id="c-templateData">
         <pre class="line-numbers"><code class="language-html">&lt;nav&gt;
   &lt;h1&gt;Barty&lt;/h1&gt;
-  &lt;ul *ngIf&#x3D;&quot;!showMenu&quot;&gt;
+  &lt;ul class&#x3D;&quot;menu-sm&quot; *ngIf&#x3D;&quot;!showMenu&quot;&gt;
     &lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;Item&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;Item&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;Item&lt;/a&gt;&lt;/li&gt;
   &lt;/ul&gt;
-  &lt;span class&#x3D;&quot;menu&quot; (click)&#x3D;&quot;showMenu &#x3D; !showMenu&quot;&gt;
+  &lt;ul class&#x3D;&quot;menu-md&quot;&gt;
+    &lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;Item&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;Item&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href&#x3D;&quot;#&quot;&gt;Item&lt;/a&gt;&lt;/li&gt;
+  &lt;/ul&gt;
+  &lt;span class&#x3D;&quot;menu-icon&quot; (click)&#x3D;&quot;showMenu &#x3D; !showMenu&quot;&gt;
     &lt;img src&#x3D;&quot;../../assets/menu.svg&quot; alt&#x3D;&quot;menu&quot; /&gt;
   &lt;/span&gt;
-&lt;/nav&gt;
-</code></pre>
+&lt;/nav&gt;</code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-styleData">
@@ -252,12 +257,16 @@ nav {
     grid-column: 1/2;
     align-self: start;
   }
-  ul {
+  .menu-sm {
     grid-column: 1/3;
     grid-row: 2/3;
     height: 100vh;
     background-color: $black;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     li {
       margin: 5rem 1rem;
       list-style: none;
@@ -268,7 +277,10 @@ nav {
       }
     }
   }
-  .menu {
+  .menu-md {
+    display: none;
+  }
+  .menu-icon {
     grid-column: 2/3;
     align-self: start;
     justify-self: end;
@@ -278,17 +290,36 @@ nav {
 
 @media (min-width: 992px) {
   nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     height: 100%;
-    text-align: center;
-    ul {
+    h1 {
+      position: fixed;
+      align-self: center;
+    }
+    .menu-sm {
+      display: none;
+    }
+    .menu-md {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      position: fixed;
+     margin-top: 10rem;
       li {
         margin: 5rem 1rem;
+        list-style: none;
         a {
           font-size: 2rem;
+          text-decoration: none;
+          color: $light;
         }
       }
     }
-    .menu {
+    .menu-icon {
       display: none;
     }
   }
@@ -321,7 +352,7 @@ nav {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><nav>  <h1>Barty</h1>  <ul *ngIf="!showMenu">    <li><a href="#">Item</a></li>    <li><a href="#">Item</a></li>    <li><a href="#">Item</a></li>  </ul>  <span class="menu" (click)="showMenu = !showMenu">    <img src="../../assets/menu.svg" alt="menu" />  </span></nav></div>'
+        var COMPONENT_TEMPLATE = '<div><nav>  <h1>Barty</h1>  <ul class="menu-sm" *ngIf="!showMenu">    <li><a href="#">Item</a></li>    <li><a href="#">Item</a></li>    <li><a href="#">Item</a></li>  </ul>  <ul class="menu-md">    <li><a href="#">Item</a></li>    <li><a href="#">Item</a></li>    <li><a href="#">Item</a></li>  </ul>  <span class="menu-icon" (click)="showMenu = !showMenu">    <img src="../../assets/menu.svg" alt="menu" />  </span></nav></div>'
     var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'CardComponent', 'selector': 'app-card'},{'name': 'CardsComponent', 'selector': 'app-cards'},{'name': 'NavComponent', 'selector': 'app-nav'},{'name': 'RatingComponent', 'selector': 'app-rating'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'NavComponent'};
