--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -67,11 +67,18 @@ p {
   padding: 1rem 2rem;
 }
 
+button {
+  @include tag;
+  background-color: #bada55;
+  margin: 1rem 2rem;
+  padding: 1rem;
+  font-family: $font-secondary;
+}
+
 // Grid
 
 .container {
   display: grid;
-  grid-template-rows: 1fr auto;
   grid-template-areas: 'nav' 'main';
 
   .nav {
@@ -80,8 +87,25 @@ p {
 
   .cards {
     grid-area: main;
-    display: grid;
-    grid-template-rows: 2fr 2fr 2fr;
+    display: flex;
+    flex-direction: column;
+  }
+  .jumbotron {
+    display: none;
+    }
+}
+
+@media (min-width: 768px) {
+  .container{
+  .jumbotron {
+    display: block;
+    background-color: $light;
+    border-radius: 0.5rem;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    margin: 2rem 4rem;
+    min-height: 30vh;
+    }
   }
 }
 
@@ -102,7 +126,6 @@ p {
     display: grid;
     grid-template-columns: 2fr 8fr;
     grid-template-areas: 'nav main';
-    height: 100vh;
 
     .nav {
       grid-area: nav;
@@ -110,8 +133,11 @@ p {
 
     .cards {
       grid-area: main;
-      display: grid;
-      grid-template-rows: 2fr 2fr 2fr;
+      display: flex;
+      flex-direction: column;
     }
+    .jumbotron {
+      min-height: 40vh;
+      }
   }
 }
