--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -10,12 +10,16 @@ nav {
     grid-column: 1/2;
     align-self: start;
   }
-  ul {
+  .menu-sm {
     grid-column: 1/3;
     grid-row: 2/3;
     height: 100vh;
     background-color: $black;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     li {
       margin: 5rem 1rem;
       list-style: none;
@@ -26,7 +30,10 @@ nav {
       }
     }
   }
-  .menu {
+  .menu-md {
+    display: none;
+  }
+  .menu-icon {
     grid-column: 2/3;
     align-self: start;
     justify-self: end;
@@ -36,17 +43,36 @@ nav {
 
 @media (min-width: 992px) {
   nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     height: 100%;
-    text-align: center;
-    ul {
+    h1 {
+      position: fixed;
+      align-self: center;
+    }
+    .menu-sm {
+      display: none;
+    }
+    .menu-md {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      position: fixed;
+     margin-top: 10rem;
       li {
         margin: 5rem 1rem;
+        list-style: none;
         a {
           font-size: 2rem;
+          text-decoration: none;
+          color: $light;
         }
       }
     }
-    .menu {
+    .menu-icon {
       display: none;
     }
   }
